# Caesura-AmeKAG

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  ALPHA_NOTES.md  BUILD.md  CMakeLists.txt  CONCEPTS.md  CONTEXT.md  Caesura_功能实现规格说明书_整合版.md  DESIGN.md  ENGINE_ANALYSIS.md  LICENSE  MACOS_ISSUES.md  MACOS_PORT_LOG.md  PLAN_MINIGAME_3D.md  README.md  STRATEGY.md  test_output.carc  test_output.carc.pub
.github/: CODEOWNERS
.github/workflows/: ci.yml
Caesura-AmeKAG-master/: CMakeLists.txt  CONTEXT.md  Caesura_功能实现规格说明书_整合版.md
Caesura-AmeKAG-master/docs/: Caesura_Alpha补完开发计划_20260607.md
Caesura-AmeKAG-master/scripts/: audio.lua  backend_factory.lua  blend.lua  gallery.lua  resource.lua  rtt.lua  scheduler.lua  settings.lua  system.lua  transform.lua
Caesura-AmeKAG-master/shaders/: compile_shaders.sh
Caesura-AmeKAG-master/tests/: CMakeLists.txt
Caesura-AmeKAG-master/tools/: _syntax_check.lua
assets/lang/: zh.lua
docs/: BACKLOG.md  BUILD.md  Caesura_功能实现规格说明书_整合版.md  ENGINE_COMPARISON.md  引擎现有能力清单.md
docs/ai/: CONTEXT.md
docs/api/: KAG-API.md  MiniGame-API.md  cpp-interfaces.md  editor-api-reference.md  kag-commands.md  lua-modules.md
docs/brainstorms/: 2026-06-07-engine-stabilization-ai-ready-requirements.md  2026-06-11-interface-isolation-requirements.md
docs/design/: backend-registry-dependency-guide.md  engine-architecture-topology.md  engine-capability-matrix.md  engine-safety-and-qa-mechanisms.md  engine-topology-mermaid.md  module-architecture-v2.md
docs/guides/: asset-pipeline.md  carc-packaging.md  getting-started.md  live2d-setup.md
docs/ideation/: 2026-06-11-open-ideation.md
docs/plans/: 2026-06-07-engine-stabilization-ai-ready.md  2026-06-09-beta-v1-full-plan.md  2026-06-09-electron-editor-ai-ready.md  2026-06-10-beta-to-rc.md  2026-06-10-editor-stabilize.md  2026-06-10-engine-deep-polish.md  2026-06-11-001-refactor-interface-isolation-plan.md  2026-06-11-002-refactor-scripting-isolation-plan.md  2026-06-11-003-refactor-bgfx-device-split-plan.md  2026-06-11-100-percent-save-rpc.md  2026-06-11-backlog-execution.md  2026-06-11-v1.0-rc-final.md  2026-06-12-001-module-completion-plan.md  2026-06-12-001-phase1-prompts.md  2026-06-12-001-phase2-prompts.md  2026-06-12-001-phase3-prompts.md  2026-06-12-001-phase4-prompts.md  2026-06-12-002-next-phase-plan.md  2026-06-12-002-t1-prompts.md  2026-06-12-002-t2-prompts.md  2026-06-12-002-t3-prompts.md  2026-06-12-002-t4-prompts.md  2026-06-12-002-t5-prompts.md  2026-06-12-003-product-ready-plan.md  2026-06-12-003-r1-prompts.md  2026-06-12-003-r1-r5-prompts.md  2026-06-12-003-r2-prompts.md  2026-06-12-003-r3-prompts.md  2026-06-12-003-r4-prompts.md  2026-06-12-003-r5-prompts.md  2026-06-12-004-launch-ready-plan.md  2026-06-12-004-s1-s5-prompts.md  2026-06-12-005-f1-f4-prompts.md  2026-06-12-005-final-phase-plan.md  2026-06-12-006-ci-fix-prompts.md  2026-06-12-006-g1-g4-prompts.md  2026-06-12-006-ship-ready-plan.md  2026-06-12-e1-prompts.md  2026-06-12-e2-prompts.md  2026-06-12-e3-prompts.md  (+14 more)
docs/strategy/: AI-CONTEXT.md  AUDIT-REPORT.md  ENGINE_ANALYSIS.md  KAG-API-REFERENCE.md  LIVE2D-PLAN.md  NEXT-STEPS-PLAN.md  OPEN-DESIGN-PROMPTS.md  SPRINT-PLAN.md  STRATEGY.md  TECH-DEBT-CLEANUP.md
docs/superpowers/: CONTEXT_ANCHOR.md
docs/templates/: scene-template.lua
docs/tutorials/: 30min-first-vn.md
scripts/: backend.lua  backend_factory.lua  blend.lua  config.lua  count_coupling.py  debug_api.lua  demo.lua  demo_minigame.lua  demo_story.ks  fileutil.lua  flow.lua  history_ui.lua  i18n.lua  kag.lua  layers.lua  lpeg.lua  music_room.lua  palette.lua  pool.lua  sandbox.lua  scheduler.lua  system.lua  tokenizer.lua  transition.lua  vfx.lua
scripts/demo/: main.lua
scripts/kag/: cancel_token.lua  conductor.lua  init.lua  parser.lua
shaders/: README.md  compile_shaders.bat  embed_metal.sh  varying.def
shaders/dx11/: affine_blt_vs.dxbc  affine_blt_vs.hlsl  embedded_dxbc.txt  embedded_new_shaders.cpp  embedded_new_shaders.h  fs_blend.hlsl  fs_texture.dxbc  fs_texture.hlsl  fs_transition.hlsl  fs_vfx.hlsl  minigame_fs.dxbc  minigame_fs.hlsl  minigame_fs_new.dxbc  minigame_vs.dxbc  minigame_vs.hlsl  minigame_vs_new.dxbc  stretch_blt_fs.dxbc  stretch_blt_vs.hlsl  vs_fullscreen.dxbc  vs_fullscreen.hlsl
shaders/glsl/: affine_blt_fs.sc  fs_blend.sc  fs_palette.sc  fs_texture.sc  fs_transition.sc  minigame_fs.sc  minigame_vs.sc  stretch_blt_vs.sc  vs_fullscreen.sc  vs_sprite.sc
shaders/metal/: affine_blt_fs.metal  affine_blt_vs.metal  fs_blend.metal  fs_texture.metal  fs_transition.metal  fs_vfx.metal  stretch_blt_fs.metal  stretch_blt_vs.metal  (+2 more)
src/: main.cpp
tests/: CMakeLists.txt  g9_test.lua  run_all.bat  test.carc  test_integration.lua
tests/audio/: silence.flac
tests/carc_test/: test.carc  test_private.key
tests/carc_test/input/: game_logic.lua
tests/cpp/: doctest.h  test_archive.cpp  test_async.cpp  test_audio.cpp  test_audio_integration.cpp  test_backend_registry.cpp  test_carc.cpp  test_core.cpp  test_debug.cpp  test_demo_e2e.cpp  test_demo_smoke.cpp  test_di.cpp  test_engine_lifecycle.cpp  test_entry.cpp  test_error_ui.cpp  test_game_state.cpp  test_hotreload_integration.cpp  test_image_decoder.cpp  test_input.cpp  test_job_system.cpp  test_kag_binding.cpp  test_kag_execution.cpp  test_kag_integration.cpp  test_layer_manager.cpp  test_live2d.cpp  test_lua_manager.cpp  test_main.cpp  test_mini_game.cpp  test_minigame.cpp  test_mobile_adapter.cpp  test_null_jobsystem.cpp  test_particle_system.cpp  test_platform.cpp  test_render.cpp  test_render_device.cpp  test_render_integration.cpp  test_render_pipeline.cpp  test_resource.cpp  test_resource_handle.cpp  test_rpc.cpp  (+10 more)
tests/mocks/: NullJobSystem.h
tests/scripts/: full_story.ks  integration_test.ks  run_lua_tests.lua  save_test.ks  smoke_test.ks  test_full_story_parse.lua  test_kag_commands.lua  test_kag_e2e.lua  test_sandbox.lua  test_scheduler.lua  test_tokenizer.lua  test_tokenizer_adv.lua
tools/carc_pack/: CMakeLists.txt  main.cpp
web-editor/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
(+427 files in other folders)
